--- a/milo-fixmenu/css/main.css
+++ b/milo-fixmenu/css/main.css
@@ -127,7 +127,7 @@ margin: 0 auto;
 padding: 30px;
 }
 a:link {color: #ecf0f1;}
-a:visited: {color: #ecf0f1;}
+a:visited {color: #ecf0f1;}
 a:hover {color: #ecf0f1;}
 a:active {color:#ecf0f1;}
 
